fixed image stretching in grid page in all flex divs

--- a/src/pages/Grid/grid.css
+++ b/src/pages/Grid/grid.css
@@ -5,4 +5,6 @@
   margin-left: 0px;
   margin-top: 300px;
   margin-bottom: 200px;
+  align-items:center;
+ 
 }
